illustfolio3/sass/core/_core.scss
/* ... */
// index

.section-profile {
    background-color: #dc3f5d;
    color: #fff;
    padding-top: 2.5em;
    padding-bottom: 4em;

    .section-header {
        &:after {
            background: #fff;
        }
    }
}

.profile-wrapper {
    display: table;
    width: 100%;

    .profile-content {
        display: table-cell;
        vertical-align: top;
    }

    h3 {
        margin-top: 0;
        margin-bottom: .8em;
    }

    .profile-image {
        display: table-cell;
        vertical-align: top;
        height: auto;
        background-size: cover;
        background-position: center;
        padding-right: 2em;
        width: 128px;

        img {
            border-radius: 128px;
        }

    }

}

.social-accounts {
    margin: 1em 0;
    padding: 0;

    li {
        display: inline-block;
        list-style: none;
        margin-right: 1em;
        padding: 0;
        vertical-align: middle;

        a {
            color: #fff;
            border: 1px solid #fff;
            border-radius: 45px;
            width: 45px;
            height: 45px;
            line-height: 45px;
            display: inline-block;
            text-align: center;
            &:hover {
                text-decoration: none;
            }
        }

        img {
            vertical-align: middle;
            height: auto;
        }
    }

}

.section-post {
    margin-top: 2.5em;
}

.index-post-wrapper {
    margin-left: -10px;
    margin-right: -10px;

    .post {
        z-index: 1;
        width: 33.3333%; // 幅960pxの場合

        img {
            max-width: 100%;
        }

        iframe {
            width: 100%;
            height: auto;
        }

    }

    .post-inner {
        padding: 10px;
    }

    .post-content {
        padding: 8px;
        background-color: $bg-light;
    }

    .entry-title {
        font-size: 140%;
        margin-top: 0;
    }

    .entry-content {
        font-size: 90%;
    }

    .quote {
        .short {
            font-size: 140%;
        }
    }

    .index-entry-footer {
        font-size: 80%;
        padding-top: .3em;
        margin-top: .3em;
        border-top: 1px solid $border;
        color: $light;
        a {
            color: $light;
        }
    }

    .icon-link {
        width: 12px;
        vertical-align: middle;
        margin-right: .2em;
    }

}

// infinite scroll で読込中のやつ
#infscr-loading {
    position: absolute;
    bottom: -50px;
    left: 0;
    width: 100% !important;
    height: 50px !important;
    text-align: center;
    color: $light;
    font-size: 80%;
}

.spinner {
  margin: auto;
  width: 50px;
  height: 30px;
  text-align: center;
  font-size: 10px;
}

.spinner > div {
  background-color: $link;
  height: 100%;
  width: 6px;
  display: inline-block;

  -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
  animation: stretchdelay 1.2s infinite ease-in-out;
}

.spinner .rect2 {
  -webkit-animation-delay: -1.1s;
  animation-delay: -1.1s;
}

.spinner .rect3 {
  -webkit-animation-delay: -1.0s;
  animation-delay: -1.0s;
}

.spinner .rect4 {
  -webkit-animation-delay: -0.9s;
  animation-delay: -0.9s;
}

.spinner .rect5 {
  -webkit-animation-delay: -0.8s;
  animation-delay: -0.8s;
}

@-webkit-keyframes stretchdelay {
  0%, 40%, 100% { -webkit-transform: scaleY(0.4) }
  20% { -webkit-transform: scaleY(1.0) }
}

@keyframes stretchdelay {
  0%, 40%, 100% {
    transform: scaleY(0.4);
    -webkit-transform: scaleY(0.4);
  }  20% {
    transform: scaleY(1.0);
    -webkit-transform: scaleY(1.0);
  }
}


// ページャ

.pagenation {
    margin: 3em 0;
    text-align: center;
    text-transform: uppercase;
    font-size: 95%;
    letter-spacing: .1em;

    a {
        display: inline-block;
        text-decoration: none;
        margin: 0 1em;
    }

}
/* ... */

